updating to preview whitespace fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -24,14 +24,12 @@ html {
   overflow-y: auto; }
 
 body {
-  height: 675px;
-  overflow: hidden;
   border-bottom: 1px solid #E1E1E1;
   box-sizing: border-box; }
 
 .container {
   width: 100%;
-  height: 675px !important; }
+  height: 100%; }
 
 /*************************
     HEADER
@@ -161,7 +159,7 @@ body {
     BIDDING AREA
 ***************************/
 .biddingArea {
-  width: 27%;
+  width: 22%;
   position: absolute;
   top: 0;
   bottom: 0;
@@ -172,22 +170,27 @@ body {
 
 .currentBid div {
   padding: 10px; }
+
 .currentBid div:last-child span:first-child {
   color: #1b75bc; }
+
 .currentBid div:last-child span:last-child {
   color: #1b75bc;
   font-size: 1.4rem;
   font-weight: 700; }
+
 .currentBid span:first-child {
   font-size: 0.8rem;
   font-weight: 700;
   text-transform: uppercase;
   letter-spacing: 1px; }
+
 .currentBid span:last-child {
   color: #515151;
   float: right !important;
   font-size: 1.2rem;
   font-weight: 700; }
+
 .currentBid .bidLocation {
   text-align: right;
   font-size: 13px;
@@ -284,6 +287,7 @@ body {
     color: #E87511;
     background-color: white;
     border-color: white; }
+
 .select-all span {
   display: inline-block; }
   .select-all span i {
@@ -303,9 +307,6 @@ body {
   width: 100% !important;
   height: auto !important;
   margin: 0 4px 10px 0; }
-  @media (min-width: 64em) {
-    .CandPCheckboxOuter {
-      width: 45% !important; } }
   .CandPCheckboxOuter span {
     color: #1b75bc !important;
     font-weight: 700; }
@@ -380,8 +381,8 @@ body {
 ***************************/
 .lotDetailsArea {
   position: absolute;
-  right: 27%;
-  width: 45%;
+  right: 22%;
+  width: 50%;
   height: 100%;
   z-index: 6;
   box-shadow: 0px 0 10px 2px rgba(0, 0, 0, 0.2); }
@@ -390,23 +391,20 @@ body {
   background: #eee;
   width: 100%;
   height: 34vw; }
-  @media (min-width: 80em) {
+  @media (max-height: 625px) {
     .videoBg {
-      height: 400px; } }
+      height: 50%; } }
   .videoBg .image_slideshow {
     background-size: cover !important; }
-    @media (min-width: 80em) {
-      .videoBg .image_slideshow {
-        background-size: 533px !important; } }
 
 .itemDetailContainer {
   position: absolute;
   top: 34vw;
   bottom: 60px;
   width: 100%; }
-  @media (min-width: 80em) {
+  @media (max-height: 625px) {
     .itemDetailContainer {
-      top: 400px; } }
+      top: 50%; } }
   .itemDetailContainer .sectionTitle {
     padding: 5px 0;
     height: 35px;
@@ -415,7 +413,7 @@ body {
     .itemDetailContainer .sectionTitle span {
       float: none !important;
       margin: 0 !important;
-      line-height: 35px !Important; }
+      line-height: 35px !important; }
 
 .lotDetails {
   font-size: 13px;
@@ -526,9 +524,9 @@ body {
           float: right !important; } }
 
 .gridHeader {
-  width: 100% !Important;
-  height: 19px !Important;
-  padding-top: 1px !Important;
+  width: 100% !important;
+  height: 19px !important;
+  padding-top: 1px !important;
   letter-spacing: 1px;
   font-size: 11px;
   text-transform: uppercase;
@@ -941,6 +939,7 @@ div[id*="HoverImage"] {
   to {
     left: 100%;
     right: 0; } }
+
 /*******************************************************/
 /* CCY CONVERTER
 /*******************************************************/
