--- a/scss/_measures.scss
+++ b/scss/_measures.scss
@@ -24,7 +24,7 @@ $biddingHeight: 250px;
 //GRID DIMENSIONS
 $left-width: 28%;
 
-$center-width: 45%;
+$center-width: 50%;
 
-$right-width: 27%;
+$right-width: 22%;
 
