--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -29,3 +29,9 @@
     @media (max-width: 30.0625em)  { @content; }
   }
 }
+
+@mixin vbreakpoint($point){
+  @if $point == large {
+    @media (max-height: 625px) { @content; }
+  }
+}
